actually the CSS cleanup didn't work (redux still needs to be there..) maybe its to do with the order of css stuff

--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -29,10 +29,10 @@
 
   <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
-
-  <!-- homepage redesign: TODO: put these changes nicely in knowitwallredux.css -->
   <link href="/static/css/homepage_redesign.css" rel="stylesheet">
 
+  <!-- <link href="/static/css/knowitwall_base.css" rel="stylesheet">
+  <link href="/static/css/homepage.css" rel="stylesheet"> -->
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic," rel="stylesheet" type="text/css">
