--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -23,8 +23,15 @@
   <link href="/static/css/audioplayer.min.css" rel="stylesheet">
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/circular_player.css" rel="stylesheet">
-  <link href="/static/css/knowitwallredux.css" rel="stylesheet">
-  <link href="/static/css/audiodoc_page.css" rel="stylesheet">
+
+  <!-- old stylesheets -->
+  <!-- <link href="/static/css/knowitwallredux.css" rel="stylesheet"> -->
+  <!-- <link href="/static/css/audiodoc_page.css" rel="stylesheet"> -->
+
+  <!-- new stylesheets -->
+  <link href="/static/css/knowitwall_base.css" rel="stylesheet">
+  <link href="/static/css/episode_page.css" rel="stylesheet">
+
   <link href="/static/css/jquery.fancybox.css" rel="stylesheet"/>
 
   <!-- Custom Fonts -->
