an episode can now only include text. need to sort out some mobile stuff though

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -382,10 +382,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -417,10 +418,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                  {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -451,10 +453,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                  {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -486,10 +489,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -520,10 +524,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -555,10 +560,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -589,10 +595,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -624,10 +631,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -658,10 +666,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
@@ -693,10 +702,11 @@ hidden
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-
+                 {% if elem.audio_mp3 %}
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
+                 {% endif %}
                  {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
