--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -363,8 +363,61 @@ hidden
   <section class="archive_desktop">
     <div class="container desktop_archive" style="width:100%; margin-left:0px;margin-right:0px;padding-left:100px;padding-right:100px;">
       <div class="episodes_container" style="border:1px solid #bdbdbd;background-color:white;border-radius:6px">
+            {% macro episode_box(episode_1 = 0) %}
+            <!-- Macro for 1 row of episode boxes.
+            Parameters: episode_1: id of the first episode.
+              -->
+              <!-- If episode_1 is divisible by 4, then set box_1='5', else set it to '7' -->
+              {% if episode_1 % 4 ==0 %} {% set box_1 = '5' %} {% else %} {% set box_1 = '7' %} {% endif %}
+              <!-- Then define box_2 based on box_1 -->
+            {% if box_1=='5' %} {% set box_2 = '7' %} {% else %} {% set box_2 = '5' %} {% endif %}
+
+            <div class="row homepage_box_row">
+              {% for elem in audiodocs[episode_1:episode_1+2] %}
+                <div class="col-md-{{loop.cycle(box_1,box_2)}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
+
+                  <a href="episodes/{{elem.url}}">
+                  <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+                    <div class="homepage_overlay">
+
+                       <p class="box_episode_title">
+                         {{elem.topic_name | safe}}
+                       </p>
+
+                     <p class="homepage_box_by-in">
+                       <i>by</i> <span class="highlight">{{elem.author_name | safe}}</span> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+                     </p>
+                   <div class="homepage_hidden_info">
+                     <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+                     {% if elem.audio_mp3 %}
+                     <div class="label_wrapper audio_label_wrapper">
+                       <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
+                     </div>
+                     {% endif %}
+                     {% if elem.video_embed %}
+                     <div class="label_wrapper film_label_wrapper">
+                       <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
+                     </div>
+                     {% endif %}
+                    </div>
+                  </div>
+                </div>
+                 </a>
+              </div>
+              {% endfor %}
+            </div>
+            {% endmacro %}
 
 
+<!-- loop episode box over all episodes -->
+<!-- HACK: I just put the end of the range manually at 22. This should rather be the lenght of the list `audiodocs` -->
+      {% for ep_num in range(0,22,2) %}
+        {{ episode_box(episode_1=ep_num)}}
+      {% endfor %}
+
+
+
+<!--
         <div class="row homepage_box_row">
           {% for elem in audiodocs[0:2] %}
             <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
@@ -718,7 +771,7 @@ hidden
              </a>
           </div>
           {% endfor %}
-        </div>
+        </div> -->
 
 
       </div>
